src/objects/Fiscal_Period__c.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>North America End Date</description>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Fiscal Year</label>
        <referenceTo>Fiscal_Year__c</referenceTo>
        <relationshipLabel>Fiscal Periods</relationshipLabel>
        <relationshipName>Fiscal_Periods</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Period_Number__c</fullName>
        <label>Period Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROW_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ROW_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>North America Period Start Date</description>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Fiscal Period</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Period_Number__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>ROW_Start_Date__c</columns>
        <columns>ROW_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>X2012</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>ROW_Start_Date__c</columns>
        <columns>ROW_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Period_Number__c</field>
            <operation>startsWith</operation>
            <value>2012</value>
        </filters>
        <label>2012</label>
    </listViews>
    <listViews>
        <fullName>X2014</fullName>
        <columns>NAME</columns>
        <columns>Period_Number__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>ROW_Start_Date__c</columns>
        <columns>ROW_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Period_Number__c</field>
            <operation>startsWith</operation>
            <value>2014</value>
        </filters>
        <label>2014</label>
    </listViews>
    <listViews>
        <fullName>X2015</fullName>
        <columns>NAME</columns>
        <columns>Period_Number__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>ROW_Start_Date__c</columns>
        <columns>ROW_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Period_Number__c</field>
            <operation>startsWith</operation>
            <value>2015</value>
        </filters>
        <label>2015</label>
    </listViews>
    <listViews>
        <fullName>X2016</fullName>
        <columns>NAME</columns>
        <columns>Period_Number__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>ROW_Start_Date__c</columns>
        <columns>ROW_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Period_Number__c</field>
            <operation>startsWith</operation>
            <value>2016</value>
        </filters>
        <label>2016</label>
    </listViews>
    <listViews>
        <fullName>X2017</fullName>
        <columns>NAME</columns>
        <columns>Period_Number__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>ROW_Start_Date__c</columns>
        <columns>ROW_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Period_Number__c</field>
            <operation>startsWith</operation>
            <value>2017</value>
        </filters>
        <label>2017</label>
    </listViews>
    <listViews>
        <fullName>X2018</fullName>
        <columns>NAME</columns>
        <columns>Period_Number__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>ROW_Start_Date__c</columns>
        <columns>ROW_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Period_Number__c</field>
            <operation>startsWith</operation>
            <value>2018</value>
        </filters>
        <label>2018</label>
    </listViews>
    <nameField>
        <label>Fiscal Period Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fiscal Periods</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>